--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                 <div class="content-box__text">Баллы можно вывести или потратить на сертификаты</div>
             </div>
         </div>
+        <div class="svg-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="56" fill="none">
+                <path fill="#53EAF0"
+                      d="M10.5 54a1.5 1.5 0 0 0 3 0h-3ZM13.06.94a1.5 1.5 0 0 0-2.12 0l-9.547 9.545a1.5 1.5 0 1 0 2.122 2.122L12 4.12l8.485 8.486a1.5 1.5 0 1 0 2.122-2.122L13.06.94ZM13.5 54V2h-3v52h3Z"/>
+            </svg>
+        </div>
         <div class="prize-fond">Призовой фонд компании<img src="/assets/img/smile-img.png" alt="smile"></div>
     </div>
     <div class="client-info">
@@ -246,7 +252,8 @@
     <div class="money">
         <div class="money-wrap">
             <div class="money-payed-wrap">
-                <div class="money-payed"><span class="big-symbol">></span> <span>112 000 000</span> <span class="big-symbol">₽</span></div>
+                <div class="money-payed"><span class="big-symbol">></span> <span>112 000 000</span> <span
+                        class="big-symbol">₽</span></div>
                 <div class="money-line self-padding">выплачено призового фонда</div>
             </div>
             <div class="money-info-wrap">
@@ -255,24 +262,41 @@
                     <div class="money-line">мотивация работает</div>
                 </div>
                 <div class="money-info-wrap__content">
-                    <div class="money-info-text">6 <img src="/assets/img/chef.png" class="money-info__img chef-img" alt="chef"></div>
+                    <div class="money-info-text">6 <img src="/assets/img/chef.png" class="money-info__img chef-img"
+                                                        alt="chef"></div>
                     <div class="money-line">постоянных клиентов</div>
                 </div>
                 <div class="money-info-wrap__content">
-                    <div class="money-info-text">13 675 <img src="/assets/img/fire.png" class="money-info__img" alt="fire"></div>
+                    <div class="money-info-text">13 675 <img src="/assets/img/fire.png" class="money-info__img"
+                                                             alt="fire"></div>
                     <div class="money-line">постоянных участников платформы</div>
                 </div>
             </div>
         </div>
     </div>
     <div class="app-cost">
-
+        <div class="app-cost-header">А сколько это стоит?</div>
+        <div class="app-cost-offer">Платите только за результат!</div>
+        <div class="app-cost-block">
+            <div class="app-cost-block-header"><span>MVP-приложение с кешбэком - </span><span class="uppercase">бесплатно</span>
+            </div>
+            <div>
+                <div>Оплачивайте только призовой фонд и агентскую комиссию.</div>
+                <div class="color-wrapper">Первые 2 месяца агентская комиссия - 0%.</div>
+            </div>
+            <div class="app-cost-block-additional">
+                <div>Агентский процент считается от суммы призового фонда. При</div>
+                <div>фонде до 1,5 мл комиссия составляет 20%. Далее - 15%.</div>
+            </div>
+        </div>
     </div>
     <div class="our-team">
         <div class="our-team-content">
             <div class="our-team-content__title headers-color">Наша команда</div>
             <div class="our-team-content__header">Люди, которые пекут Пряник</div>
-            <div class="our-team-content__description">Текст-описание небольшое, но очень интересное, возможно в несколько строк</div>
+            <div class="our-team-content__description">Текст-описание небольшое, но очень интересное, возможно в
+                несколько строк
+            </div>
         </div>
         <div class="our-team-photos">
             <img src="/assets/img/team-photos.png" alt="team">
@@ -283,12 +307,12 @@
     </div>
     <div class="questions">
         <div class="questions-wrapper">
-            <div class="questions-header">Остались вопросы?</div>
-            <img src="" alt="">
-            <div class="owner-name">Игорь Максимов</div>
-            <div class="owner-phone">+7(916)838-07-11</div>
-            <a href="mailto:im@12.digital">im@12.digital</a>
-            <a href="">Напишите Игорю в Telegram</a>
+            <div class="questions-wrapper__header">Остались вопросы?</div>
+            <img src="/assets/img/igor.png" class="questions-wrapper__img" alt="Igor">
+            <div class="questions-wrapper__owner-name">Игорь Максимов</div>
+            <div class="questions-wrapper__owner-phone">+7(916)838-07-11</div>
+            <a href="mailto:im@12.digital" class="questions-wrapper__mail-to">im@12.digital</a>
+            <a href="/" class="questions-wrapper__button">Напишите Игорю в Telegram</a>
         </div>
     </div>
 </div>
